# virtual-tty

./: .gitignore  Cargo.toml  Claude.md  README.md  long_lines.txt  numbered_lines.txt  task.md
crates/virtual-tty/: Cargo.toml  Claude.md  README.md  large_content.txt
crates/virtual-tty-pty/: Cargo.toml  Claude.md  README.md  SNAPSHOT_MANAGEMENT.md  TESTING_PATTERNS.md  large_content.txt  numbered_lines.txt
crates/virtual-tty-pty/src/: lib.rs
crates/virtual-tty-pty/tests/: cursor_movement_validation_tests.rs  less_tests.rs  ls_tests.rs  vim_advanced_features_tests.rs  vim_basic_operations_tests.rs  vim_edge_cases_tests.rs  vim_real_world_scenarios_tests.rs  vim_tests.rs
crates/virtual-tty-pty/tests/common/: mod.rs
crates/virtual-tty-pty/tests/fixtures/: basic_content.txt  corrupted_file.txt  debug_test.js  documentation.md  extreme_formatting.txt  large_file.txt  mixed_encodings.txt  multiline_content.txt  sample_code.rs  single_line.txt  stress_test.txt  structured_content.txt  syntax_test.rs  ten_lines.txt  test_vimrc
crates/virtual-tty-pty/tests/less/: less_tests.rs
crates/virtual-tty-pty/tests/ls/: ls_tests.rs
crates/virtual-tty-pty/tests/vim/: vim_tests.rs
crates/virtual-tty-wasm/: Cargo.toml  README.md
crates/virtual-tty-wasm/src/: lib.rs
crates/virtual-tty/src/: buffer.rs  cursor.rs  errors.rs  lib.rs  state.rs
crates/virtual-tty/src/ansi/: commands.rs  mod.rs  parser.rs
crates/virtual-tty/tests/: complex_scenarios_tests.rs  cursor_navigation_tests.rs  cursor_state_tests.rs  mixed_complex_scenarios_tests.rs  mixed_cursor_navigation_tests.rs  mixed_cursor_state_tests.rs  mixed_screen_editing_tests.rs  screen_editing_tests.rs  stderr_complex_scenarios_tests.rs  stderr_cursor_navigation_tests.rs  stderr_cursor_state_tests.rs  stderr_screen_editing_tests.rs
examples/: basic_tty.rs  generate_test_content.rs  less_scrolling.rs  pty_interactive.rs  pty_ls.rs  testing_example.rs  vim_hjkl.rs
js/virtual-tty/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json
