[workspace]
members = [
    "crates/virtual-tty",
    "crates/virtual-tty-pty",
    "crates/virtual-tty-wasm"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Andrew Vassilyev <xavescor@xavescor.dev>"]
license = "MIT"
repository = "https://github.com/xavescor/virtual-tty"
description = "Virtual TTY library for testing terminal applications"

[workspace.dependencies]
libc = "0.2"