[package]
name = "virtual-tty-pty"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PTY integration for virtual-tty - run real processes in virtual terminals"

[dependencies]
virtual-tty = { path = "../virtual-tty" }
libc.workspace = true

[[example]]
name = "pty_ls"
path = "../../examples/pty_ls.rs"

[[example]]
name = "pty_interactive"
path = "../../examples/pty_interactive.rs"

[[example]]
name = "generate_test_content"
path = "../../examples/generate_test_content.rs"

[[example]]
name = "less_scrolling"
path = "../../examples/less_scrolling.rs"

[[example]]
name = "vim_hjkl"
path = "../../examples/vim_hjkl.rs"