[package]
name = "virtual-tty-pty"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PTY integration for virtual-tty - run real processes in virtual terminals"

[dependencies]
virtual-tty = { path = "../virtual-tty" }
libc.workspace = true

