[package]
name = "virtual-tty"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core virtual TTY implementation for testing terminal applications"

[dependencies]
# No external dependencies - pure Rust implementation

[[example]]
name = "basic_tty"
path = "../../examples/basic_tty.rs"

[[example]]
name = "testing_example"
path = "../../examples/testing_example.rs"