[package]
name = "virtual-tty"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core virtual TTY implementation for testing terminal applications"

[dependencies]
# No external dependencies - pure Rust implementation

[dev-dependencies]
insta = "1.43.1"

