[package]
name = "virtual-tty"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core virtual TTY implementation for testing terminal applications"
readme = "README.md"
keywords = ["terminal", "tty", "testing", "cli", "ansi"]
categories = ["development-tools::testing", "command-line-interface"]

[dependencies]
# No external dependencies - pure Rust implementation

[dev-dependencies]
insta = "1.43.1"

